<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".LoginScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:textSize="26sp"
            android:textStyle="bold"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/let_s_get_started"
            tex
            android:fontFamily="sans-serif"
            android:textSize="12sp"
            android:textStyle="normal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:fontFamily="sans-serif"
                android:fontSize="16sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <EditText
                android:layout_width="320dp"
                android:layout_height="30dp"
                android:inputType="text"
                android:background="@drawable/edittext_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@{firstName}" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:fontFamily="sans-serif"
                android:fontSize="16sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <EditText
                android:layout_width="320dp"
                android:layout_height="30dp"
                android:inputType="text"
                android:background="@drawable/edittext_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@{lastName}" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:fontFamily="sans-serif"
                android:fontSize="16sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <EditText
                android:layout_width="320dp"
                android:layout_height="30dp"
                android:inputType="number"
                android:digits="0123456789"
                android:background="@drawable/edittext_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@{phoneNumber}" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:fontFamily="sans-serif"
                android:fontSize="16sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <EditText
                android:layout_width="320dp"
                android:layout_height="30dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/edittext_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@{email}" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                android:fontFamily="sans-serif"
                android:fontSize="16sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <EditText
                android:layout_width="320dp"
                android:layout_height="30dp"
                android:inputType="date"
                android:background="@drawable/edittext_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@{birthday}" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:fontFamily="sans-serif"
                android:fontSize="16sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:background="@drawable/edittext_background">

                <EditText
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:text="@{password}"
                    android:background="@null"/>

                <ImageView
                    android:id="@+id/password_visibility"
                    android:layout_width="24dp"
                    android:layout_gravity="center"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_visibility_off"
                    android:contentDescription="@string/password_visibility"
                    android:onClick="@{() -> passwordVisibilityClicked()}"
                    android:padding="4dp" />

            </LinearLayout>

        </LinearLayout>



        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />



        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/register_button_label"

            android:paddingBottom="16dp" />



    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>